--- a/dotNet5781_03B_1853_9327/ShowBusDetailsWindow.xaml
+++ b/dotNet5781_03B_1853_9327/ShowBusDetailsWindow.xaml
@@ -14,27 +14,37 @@
         <Label Content="Rishuy Number :" FontSize="22"  HorizontalAlignment="Left" Margin="63,10,0,0" VerticalAlignment="Top" Height="40" Width="173" RenderTransformOrigin="0.644,-0.104" FontFamily="Californian FB"/>
         <Label Content="Total Kilometrage :" FontSize="22" HorizontalAlignment="Left" Margin="63,55,0,0" VerticalAlignment="Top" Height="47" Width="199" FontFamily="Californian FB"/>
         <Label Content="Start Peilut :" FontSize="22" HorizontalAlignment="Left" Margin="63,102,0,0" VerticalAlignment="Top" Height="38" Width="145" FontFamily="Californian FB"/>
-        <Label HorizontalAlignment="Left" Margin="-565,402,0,0" VerticalAlignment="Top" FontFamily="Californian FB"/>
-        <Label Content="fuel :" FontSize="22" HorizontalAlignment="Left" Margin="63,145,0,0" VerticalAlignment="Top" Height="39" Width="108" FontFamily="Californian FB"/>
+
+        <Label Content="fuel :" FontSize="22" HorizontalAlignment="Left" Margin="63,145,0,0" VerticalAlignment="Top" Height="39" Width="64" FontFamily="Californian FB"/>
         <Label Content="Kilometrage From Last Treatment :" FontSize="22" HorizontalAlignment="Left" Margin="63,189,0,0" VerticalAlignment="Top" Width="358" FontFamily="Californian FB"/>
         <Label Content="Last Treatment :" FontSize="22" HorizontalAlignment="Left" Margin="63,233,0,0" VerticalAlignment="Top" Height="37" Width="199" FontFamily="Californian FB"/>
-        <Label Content="Status :" FontSize="22" HorizontalAlignment="Left" Margin="63,275,0,0" VerticalAlignment="Top" Height="40" Width="199" FontFamily="Californian FB"/>
+        <Label Content="Status :" FontSize="22" HorizontalAlignment="Left" Margin="63,275,0,0" VerticalAlignment="Top" Height="40" Width="91" FontFamily="Californian FB"/>
         <TextBlock HorizontalAlignment="Left" Margin="269,19,0,0" TextWrapping="Wrap" Text="{Binding Rishuy}" VerticalAlignment="Top" Height="31" Width="107" FontFamily="Californian FB"/>
         <TextBlock HorizontalAlignment="Left" Margin="269,67,0,0" TextWrapping="Wrap" Text="{Binding Kilometrage}" VerticalAlignment="Top" Height="26" RenderTransformOrigin="0.5,0.5" Width="154" FontFamily="Californian FB"/>
 
         <TextBlock Margin="241,114,108.333,0" TextWrapping="Wrap" Text="{Binding StartPeilut, StringFormat={}{0:dd/MM/yyyy}}" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="26" FontFamily="Californian FB">
 
         </TextBlock>
-        <TextBlock HorizontalAlignment="Left" Margin="214,166,0,0" TextWrapping="Wrap" Text="{Binding Delek}" VerticalAlignment="Top" Height="23" Width="98" FontFamily="Californian FB"/>
+        <TextBlock HorizontalAlignment="Left" Margin="116,159,0,0" TextWrapping="Wrap" Text="{Binding Delek}" VerticalAlignment="Top" Height="18" Width="76" FontFamily="Californian FB" RenderTransformOrigin="0.5,0.5">
+            <TextBlock.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.289"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </TextBlock.RenderTransform>
+        </TextBlock>
+        <!--Binding the data of the bus to the lables-->
         <TextBlock HorizontalAlignment="Left" Margin="426,199,0,0" TextWrapping="Wrap" Text="{Binding l_treatment.KilFromTreat}" VerticalAlignment="Top" Height="26" Width="120" Grid.ColumnSpan="2" FontFamily="Californian FB"/>
         <TextBlock HorizontalAlignment="Left" Margin="269,243,0,0" TextWrapping="Wrap" Text="{Binding l_treatment.Date, StringFormat={}{0:dd/MM/yyyy}}" VerticalAlignment="Top" Height="27" Width="131" FontFamily="Californian FB"/>
-        <TextBlock HorizontalAlignment="Left" Margin="214,288,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Height="27" Width="114" FontFamily="Californian FB"/>
+        <TextBlock HorizontalAlignment="Left" Margin="154,286,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Height="24" Width="125" FontFamily="Californian FB"/>
         <Button Content="Treatment" Name="TreatmentBtn" Grid.Column="1" HorizontalAlignment="Left" Margin="232.667,368,0,0" VerticalAlignment="Top" Width="75" Click="TreatmentBtn_Click" FontFamily="Candara" FontSize="16" Background="#FFC19875"/>
         <Button Content="Tidluk" Name="TidlukBtn" Grid.Column="1" HorizontalAlignment="Left" Margin="232.667,324,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" FontFamily="Candara" FontSize="16" Background="#FFC19875"/>
         <Label Content="Remaining Time &#xD;&#xA;for Tidluk:" FontSize="18" HorizontalAlignment="Left" Margin="63,315,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.658,-0.288" Width="130" Height="54" FontFamily="Californian FB"/>
-        <TextBlock x:Name="RemainingTimeTidlukTb" HorizontalAlignment="Left" Margin="214,320,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="49" Width="65" FontFamily="Californian FB"/>
-        <TextBlock  FontSize="18" HorizontalAlignment="Left" Margin="304,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="49" Width="141"><Run Text="Remaining Time "/><LineBreak/><Run Text="for Treatment:"/></TextBlock>
-        <TextBlock x:Name="RemainingTimeTreatTb" HorizontalAlignment="Left" Margin="450,324,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="41" Grid.ColumnSpan="2" Width="79" RenderTransformOrigin="1.517,1.304"/>
+        <TextBlock x:Name="RemainingTimeTidlukTb" HorizontalAlignment="Left" Margin="198,320,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="49" Width="149" FontFamily="Californian FB" FontSize="24"/>
+        <TextBlock  FontFamily="Californian FB" FontSize="18" HorizontalAlignment="Left" Margin="366,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="49" Width="145" RenderTransformOrigin="0.887,0.476" Grid.ColumnSpan="2"><Run Text="Remaining Time "/><LineBreak/><Run Text="for Treatment:"/></TextBlock>
+        <TextBlock x:Name="RemainingTimeTreatTb" HorizontalAlignment="Right" Margin="0,324,141.333,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="41" Width="136" RenderTransformOrigin="1.517,1.304" FontSize="24" Grid.Column="1" FontFamily="Californian FB"/>
 
     </Grid>
 </Window>
