--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -9,17 +9,8 @@
     <Grid RenderTransformOrigin="1.111,0.273">
         <Button Name="LoginManager" Content="Login As A Manager" HorizontalAlignment="Left" VerticalAlignment="Top" Width="237" Margin="104,211,0,0" Height="92" RenderTransformOrigin="0.95,-0.989" Click="LoginManager_Click"/>
         <Button Content="Login As A Passanger" HorizontalAlignment="Left" Margin="504,211,0,0" VerticalAlignment="Top" Width="237" Height="92" RenderTransformOrigin="0.205,1.521"/>
-        <TextBox Name="username" HorizontalAlignment="Left" Height="34" Margin="314,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="232"/>
-        <TextBox Name="password" HorizontalAlignment="Left" Height="35" Margin="315,105,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="229" RenderTransformOrigin="0.5,0.5">
-            <TextBox.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0.146"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </TextBox.RenderTransform>
-        </TextBox>
+        <TextBox Name="username" HorizontalAlignment="Left" Height="34" Margin="314,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223"/>
+        <PasswordBox x:Name="passwordPB" Height="34" Margin="314,106,247.333,0" VerticalAlignment="Top" Background="LightBlue" Foreground="DarkBlue" MaxLength="25" PasswordChar="*" FontSize="18" FontFamily="Rockwell Condensed"/>
         <TextBlock HorizontalAlignment="Left" Margin="165,49,0,0" TextWrapping="Wrap" Text="Enter A User Name:" VerticalAlignment="Top" Height="34" Width="111"/>
         <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Enter A password:" VerticalAlignment="Top" Margin="165,106,0,0" Height="36" Width="111"/>
 
