--- a/PL/StationDetails.xaml
+++ b/PL/StationDetails.xaml
@@ -13,11 +13,12 @@
         <TextBlock  Name="LatTextBlock" HorizontalAlignment="Left" Margin="189,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="33" Width="95"/>
         <Label Content="Location Longitude:" HorizontalAlignment="Left" Margin="329,65,0,0" VerticalAlignment="Top" Width="135" Height="39"/>
         <TextBlock  Name="LonTextBlock"  HorizontalAlignment="Left" Margin="469,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="31" Width="122"/>
-        <DataGrid Name="StationDataGrid" Margin="36,130,62.333,42.667" AutoGenerateColumns="False" IsReadOnly="True">
-        <DataGrid.Columns>
-            <DataGridTextColumn  Header="Line`s Number" Binding="{Binding LineId}" Width="*" FontFamily="Cooper Black" />
+        <DataGrid Name="StationDataGrid" Margin="36,130,62,101" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn  Header="Line`s Number" Binding="{Binding LineId}" Width="*" FontFamily="Cooper Black" />
                 <DataGridTextColumn Header="Last Station`s Name " Binding="{Binding LastStationName}" Width="1.5*" FontFamily="Cooper Black"/>
             </DataGrid.Columns>
         </DataGrid>
+        <Button Content="Simulator" HorizontalAlignment="Left" Margin="495,351,0,0" VerticalAlignment="Top" Width="177" Height="46" Click="Button_Click_1"/>
     </Grid>
 </Window>
