--- a/PL/AddFollowingStationWindow.xaml
+++ b/PL/AddFollowingStationWindow.xaml
@@ -5,14 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="AddFollowingStationWindow" Height="450" Width="800">
+        Title="AddFollowingStationWindow" Height="450" Width="800" Icon="Images/station.jpg">
     <Grid>
-        <Label Content="Enter distance between the two station:" VerticalAlignment="Top" RenderTransformOrigin="2.915,2.507" Height="48" Margin="29,167,509.333,0"/>
-        <TextBox Name="DistanceTb" HorizontalAlignment="Left" Height="48" Margin="304,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="158"/>
-        <Label Content="Choose following station:" HorizontalAlignment="Left" Margin="29,53,0,0" VerticalAlignment="Top" Height="40" Width="255"/>
-        <ComboBox Name="FollowingCb" HorizontalAlignment="Left" Margin="304,53,0,0" VerticalAlignment="Top" Width="158" Height="40" RenderTransformOrigin="0.5,0.5"></ComboBox>
-        <Label Content="Enter Travel Time between two station:(hh:mm)" HorizontalAlignment="Left" Margin="29,257,0,0" VerticalAlignment="Top" Width="270" Height="45"/>
-        <Button Content="Confirm Add" HorizontalAlignment="Left" Margin="617,333,0,0" VerticalAlignment="Top" Width="111" Height="44" Click="ConfirmAddButton_Click"/>
-        <TextBox Name="TravelTimeTb" HorizontalAlignment="Left" Height="42" Margin="304,257,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="158"/>
+        <Grid.Background>
+            <ImageBrush ImageSource="Images/station.jpg" Stretch="Uniform" Opacity="0.7"/>
+        </Grid.Background>
+        <Label Content="Enter distance between the two station:" VerticalAlignment="Top" RenderTransformOrigin="2.915,2.507" Height="48" Margin="29,167,430.333,0" FontFamily="Segoe Print" FontSize="15" FontWeight="ExtraBold"/>
+        <TextBox Name="DistanceTb" HorizontalAlignment="Left" Height="48" Margin="414,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="153"/>
+        <Label Content="Choose following station:" HorizontalAlignment="Left" Margin="29,53,0,0" VerticalAlignment="Top" Height="40" Width="255" FontFamily="Segoe Print" FontSize="15" FontWeight="ExtraBold"/>
+        <ComboBox Name="FollowingCb" HorizontalAlignment="Left" Margin="414,53,0,0" VerticalAlignment="Top" Width="153" Height="40" RenderTransformOrigin="0.5,0.5"></ComboBox>
+        <Label Content="Enter Travel Time between two station:(hh:mm)" HorizontalAlignment="Left" Margin="29,257,0,0" VerticalAlignment="Top" Width="380" Height="45" FontFamily="Segoe Print" FontSize="15" FontWeight="ExtraBold"/>
+        <Button Content="Confirm Add" HorizontalAlignment="Left" Margin="617,333,0,0" VerticalAlignment="Top" Width="118" Height="44" Click="ConfirmAddButton_Click" Background="#FFEDC6C6" FontFamily="Segoe UI Semibold" FontSize="15"/>
+        <TextBox Name="TravelTimeTb" HorizontalAlignment="Left" Height="42" Margin="414,257,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="153"/>
     </Grid>
 </Window>
