--- a/PL/DistanceWindow.xaml
+++ b/PL/DistanceWindow.xaml
@@ -5,9 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="DistanceWindow" Height="450" Width="800">
+        Title="DistanceWindow" Height="450" Width="800" Icon="Images/Road.jpg">
     <Grid>
-        
+        <Grid.Background>
+            <ImageBrush ImageSource="Images/Road.jpg" Opacity="0.6"/>
+        </Grid.Background>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="12*"/>
@@ -25,10 +28,10 @@
                 <SolidColorBrush x:Key="{x:Static SystemColors.ControlDarkDarkBrushKey}" Color="Silver"/>
             </Slider.Resources>
         </Slider>
-        <TextBlock   FontFamily="Haettenschweiler" HorizontalAlignment="Left" Margin="227.667,39,0,0" TextWrapping="Wrap" Text="Choose distance" FontSize="27" VerticalAlignment="Top" Height="61" Width="199" Grid.Column="1"/>
+        <TextBlock   FontFamily="Haettenschweiler" HorizontalAlignment="Left" Margin="318.667,10,0,0" TextWrapping="Wrap" FontSize="40" VerticalAlignment="Top" Height="69" Width="244" Grid.Column="1"><Run Text="Choose "/><Run Text="distance"/></TextBlock>
         <!--Displays the distance selected by the user from the slider key-->
-        <TextBlock FontSize="22" FontFamily="Haettenschweiler" HorizontalAlignment="Left" Margin="227.048,264,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="33" Width="119" Text="{Binding ElementName=DistanceSlider, Path=Value}" Grid.Column="1"/>
-        <Label Content="The choosen distance :" FontSize="22" HorizontalAlignment="Left" Margin="31.048,259,0,0" VerticalAlignment="Top" Height="58" Width="191"  FontFamily="Haettenschweiler" Grid.Column="1"/>
+        <TextBlock FontSize="27" FontFamily="Haettenschweiler" HorizontalAlignment="Left" Margin="234.667,264,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="53" Width="111" Text="1" Grid.Column="1"/>
+        <Label Content="The chosen distance :" FontSize="27" HorizontalAlignment="Left" Margin="30.667,259,0,0" VerticalAlignment="Top" Height="58" Width="199"  FontFamily="Haettenschweiler" Grid.Column="1"/>
 
     </Grid>
 </Window>
