--- a/PL/ShowAllLines.xaml
+++ b/PL/ShowAllLines.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="ShowAllLines" Height="450" Width="800">
-    <Grid RenderTransformOrigin="0.472,0.559">
+        Title="ShowAllLines" Height="450" Width="800"  Icon="Images/line.jpg">
+    <Grid RenderTransformOrigin="0.472,0.559" Background="#FFDDA1A1">
 
         <DataGrid MouseDoubleClick="LinesDataGrid_MouseDoubleClick" IsReadOnly="True"  AutoGenerateColumns="False" Name="LinesDataGrid" HorizontalAlignment="Left" Height="271" Margin="45,47,0,0" VerticalAlignment="Top" Width="678">
             <DataGrid.Columns>
@@ -19,7 +19,7 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <!-- Add update button to all the rows, for each bus in the list -->
-                            <Button x:Name="UpdateBtn" Background="Green" Content="Update" Click="UpdateButton_Click" FontFamily="Century Gothic"></Button>
+                            <Button x:Name="UpdateBtn" Background="#FFEAA47B" Content="Update" Click="UpdateButton_Click" FontFamily="Century Gothic"></Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -27,12 +27,12 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <!-- Add delete button to all the rows, for each bus in the list -->
-                            <Button x:Name="DeleteBtn" Background="Green"  Content="Delete" Click="DeleteButton_Click" FontFamily="Century Gothic"></Button>
+                            <Button x:Name="DeleteBtn" Background="#FFEAA47B"  Content="Delete" Click="DeleteButton_Click" FontFamily="Century Gothic"></Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Add Line" HorizontalAlignment="Left" Margin="617,350,0,0" VerticalAlignment="Top" Width="143" Height="45" Click="AddLineButton_Click"/>
+        <Button Content="Add Line" HorizontalAlignment="Left" Margin="617,350,0,0" VerticalAlignment="Top" Width="143" Height="45" Click="AddLineButton_Click" Background="#FFEAA47B" FontFamily="Segoe UI Historic" FontSize="16" FontWeight="Bold"/>
     </Grid>
 </Window>
